saga-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: public-nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  namespace: mydev-ywyi
  name: cnadata-test-ingress
spec:
  rules:
  - host: cnadata-test.modern-dev.cloudzcp.io
    http:
      paths:
      - path: /saga-orchestrators(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: saga-orchestrators-service
          servicePort: 8080
      - path: /saga-orchestrators-mgmt(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: saga-orchestrators-service
          servicePort: 8081
      - path: /saga-consumers(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: saga-consumers-service
          servicePort: 8080
      - path: /saga-consumers-mgmt(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: saga-consumers-service
          servicePort: 8081            
      - path: /cqrs-consumer-streams(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: cqrs-consumer-streams-service
          servicePort: 8080
      - path: /cqrs-consumer-streams-mgmt(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: cqrs-consumer-streams-service
          servicePort: 8081
